# webgpu_playground

./: .gitignore  Cargo.toml  README.md  build.rs  index.html
src/: camera.rs  lib.rs  main.rs  shader.wgsl  toogle_bool.rs  vertex.rs
src/state/: mod.rs  state.rs
src/state/render_components/: camera.rs  color_renderpass.rs  depth_renderpass.rs  instance.rs  light.rs  mod.rs  model.rs  render_pipeline.rs  renderpass.rs  texture.rs  vertex.rs
src/state/shader/: depth.wgsl  shader.wgsl
src/state/shader/wgsl/: light.wgsl
src/ui/: controls.rs  counter.rs  mod.rs
src/util/: math_funcs.rs  mod.rs
src/wasm/: resources.rs
