[package]
name = "webgpu_tut_lib"
version = "0.1.0"
authors = ["Kai Schubert <kai.alexander.schubert@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "webgpu_tut_bin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12.0"
pollster = "0.2"
cfg-if = "1"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

iced = { version = "0.4", features = ["tokio"] }
iced_wgpu = {version = "0.5.1"}
iced_web = "0.4"
iced_winit = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.69"
tobj = { version = "3.2.1", features = ["async"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook = "0.1"
console_log = "0.2"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "HtmlCanvasElement",
]}
